2008-Aug-24  yselkowitz

	* lib/cmake.cygclass: NEW for cygcmake() and default src_compile().
	lib/kde4.cygclass: Call it.
	lib/opensync.cygclass: Ditto.
	lib/qt4-cmake.cygclass: Ditto.
	bin/cygport.in (cygcmake): Removed.

	* bin/dolib: Use libtool to install libtool libraries.

	* bin/cygport.in (__prepdoc): Don't default install ABOUT-NLS or INSTALL.

	* lib/berkdb.cygclass: Disable building of Java bindings.

	* lib/mono.cygclass: Remove MAKEOPTS override.

	* lib/qt3.cygclass:
	lib/qt3-qmake.cygclass:
	lib/Makefile.am:
	Move qmake code into separate qt3-qmake cygclass.

	* bin/cygport.in: Make dependency on diffstat required.

	* lib/fox-build.cygclass, lib/Makefile.am: Renamed old fox.cygclass.
	lib/fox.cygclass: Replaced with wxwidgets-style fox-config wrapper.

	* configure.in: Post-release version bump.

2008-Aug-22  yselkowitz

	* bin/cygport.in (_privclassdir): Move to $pkgdatadir/cygclass.
	lib/Makefile.am (cygclassdir): Ditto.

	* lib/Makefile.am (cygclass_DATA): Don't install gst-plugins0.8.cygclass.

	* lib/gtk2-perl.cygclass: PODs and manpages build OOTB on 1.7.
	Inter-module linking fixed in perl 5.10.0-5 and EU::D 0.300-2.

	* bin/cygport.in (__mkdirs, __finish): Managed mounts are extinct.
	bin/Makefile.am: Do not install make_managed_mount.

	* bin/cygport.in: Only run on Cygwin 1.7.

	* bin/cygport.in (__prepinfo): Compress only *.info* files.

	* configure.in: Post-release version bump.

2008-Aug-19  yselkowitz

	* Branched 0.3.13 for cygwin-1.5; trunk is now for cygwin-1.7.